finish desktop design

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </div>
     <nav class="nav ">
       <ul class="nav__list">
-        <li class="nav__item"><a href="" class="nav__link">Home</a></li>
-        <li class="nav__item"><a href="" class="nav__link">Services</a></li>
-        <li class="nav__item"><a href="" class="nav__link">Skills</a></li>
-        <li class="nav__item"><a href="" class="nav__link">Works</a></li>
+        <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+        <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
         <li class="nav__item"><a href="" class="nav__link">Contact Me</a></li>
       </ul>
 
@@ -47,45 +47,115 @@
 
   </header>
   <!-- Hero -->
-  <section class="hero">
+  <section class="hero" id="home">
     <div class="hero__content">
       <h1>Hi, I'm <span class="text-secondary">Marck Henroe <br> Bautista</span></h1>
       <p>Web Developer</p>
       <a href="#contact" class="btn btn-primary">Contact Me</a>
+    </div>
+    <img src="images/profile-low-opacity.png" class="hero__image" alt="My Profile Picture">
+  </section>
+
+  <!-- Services -->
+  <section class="services" id="services">
+    <div class="container">
+      <h1 class="section-title text-primary">SERVICES</h1>
+      <div class="grid">
+        <div class="item">
+          <i class="fas fa-palette"></i>
+          <h1>Web Development</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, velit.</p>
+        </div>
+        <div class="item">
+          <i class="fas fa-palette"></i>
+          <h1>Web Design</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, velit.</p>
+        </div>
+        <div class="item">
+          <i class="fas fa-palette"></i>
+          <h1>UI / UX Design</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, velit.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills -->
+  <section class="skills" id="skills">
+    <div class="container">
+      <h1 class="section-title">Skills</h1>
+      <div class="grid">
+        <div class="item bg-secondary">
+          <h3>HTML</h3>
+        </div>
+        <div class="item bg-danger">
+          <h3>CSS</h3>
+        </div>
+        <div class="item bg-primary">
+          <h3>SCSS</h3>
+        </div>
+        <div class="item bg-secondary">
+          <h3>JavaScript</h3>
+        </div>
+        <div class="item bg-danger">
+          <h3>TypeScript</h3>
+        </div>
+        <div class="item bg-primary">
+          <h3>ReactJS</h3>
+        </div>
+        <div class="item bg-secondary">
+          <h3>NodeJS</h3>
+        </div>
+        <div class="item bg-danger">
+          <h3>PHP</h3>
+        </div>
+        <div class="item bg-primary">
+          <h3>Laravel</h3>
+        </div>
+        <div class="item bg-secondary">
+          <h3>Docker</h3>
+        </div>
+        <div class="item bg-danger">
+          <h3>MySQL</h3>
+        </div>
+        <div class="item bg-primary">
+          <h3>MongoDB</h3>
+        </div>
+      </div>
 
     </div>
-
-    <img src="images/profile-low-opacity.png" class="hero__image" alt="My Profile Picture">
-
-
   </section>
 
-  <section class="services">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, obcaecati illo eum eaque in aliquam deleniti
-      dolore neque aspernatur? Quo mollitia amet itaque alias fugit nemo perspiciatis nulla repellat necessitatibus
-      excepturi quos illum, voluptas quam fugiat quasi ullam explicabo debitis. Quia facilis cupiditate neque. Natus,
-      sit? Sequi commodi atque pariatur, consequuntur veritatis tenetur, magni voluptatum provident architecto nisi
-      nulla assumenda tempora exercitationem sed veniam harum ab, nobis nemo repellat aspernatur! Beatae suscipit earum
-      harum expedita ratione autem corporis dolorem ab excepturi numquam cumque, libero non in id placeat, possimus
-      nobis. Voluptas laborum optio rem nihil facere dolorem earum consequuntur! Vel, quos accusamus! Sit, sapiente
-      nulla, expedita reiciendis numquam ad porro ex similique culpa vitae esse impedit beatae consequatur? Recusandae,
-      inventore. Laudantium, repellendus voluptatem corporis alias dolor architecto tenetur voluptatibus ratione,
-      asperiores ullam animi! Dolores facere explicabo voluptatum nobis ab fugiat facilis nam ducimus, officiis vitae
-      nulla officia odio, error exercitationem ad recusandae expedita fugit quos eum! Error, quae qui nesciunt natus
-      delectus autem? Voluptas atque molestiae beatae recusandae nam suscipit incidunt molestias velit, sed dolores.
-      Temporibus hic aspernatur harum perspiciatis aperiam amet et, quam, fuga deserunt labore facilis incidunt error
-      quia nemo vero a enim optio reprehenderit esse dolorum accusantium numquam commodi! Perspiciatis autem quam
-      voluptates fuga quia corporis omnis distinctio sed soluta dolore labore similique asperiores, id culpa numquam
-      debitis alias, reprehenderit nostrum dolorum sunt dicta doloribus consequuntur quo. Minima excepturi obcaecati
-      minus officiis error recusandae odio sed nihil magnam consequuntur neque numquam in cumque dignissimos labore, ex
-      voluptatum modi iure harum architecto esse. Natus ut quisquam eius ducimus assumenda aut numquam? Officia hic
-      corporis quis. Illum neque vero, dolor, vitae voluptate qui ut quibusdam tenetur ea, animi repellat laborum veniam
-      laudantium mollitia incidunt alias. Accusantium, laborum. Ab facere ea eaque fugiat accusamus? Illo animi aut
-      asperiores fugiat voluptatibus vero officiis consequatur ex voluptatum, unde corrupti perferendis nulla ut
-      cupiditate suscipit nam error praesentium odio ullam ipsam quasi assumenda? Ipsa impedit quae sequi, incidunt
-      corrupti est. A, aliquam libero!</p>
-  </section>
 
+  <!-- projects -->
+  <section class="projects" id="projects">
+    <div class="container">
+      <h1 class="section-title text-primary">PROJECTS</h1>
+    </div>
+    <div class="projects__grid">
+      <div class="projects__grid-item">
+        <div class="content">
+          <h1>Sample Work</h1>
+        </div>
+        <img src="images/work-sample.jpg" alt="">
+      </div>
+      <div class="projects__grid-item">
+        <div class="content">
+          <h1>Sample Work</h1>
+        </div>
+        <img src="images/work-sample.jpg" alt="">
+      </div>
+      <div class="projects__grid-item">
+        <div class="content">
+          <h1>Sample Work</h1>
+        </div>
+        <img src="images/work-sample.jpg" alt="">
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <h3>&copy; Marck Henroe Bautista. All Right Reserved, 2021</h3>
+  </footer>
 
 
   <script src="js/main.js"></script>
